Add mock transfer requery endpoint
